# rob535_competition

./: .gitignore  Cargo.toml  ROB599_ControlProject_part2_Team5.m  ROB599_ControlsProject2_part2_Team5.m  best_us_75.txt  bl.csv  br.csv  build.rs  cline.csv  cplex_qp_rust.c  do_make.sh  makefile  ref_u.csv  ref_x.csv  rob535_competition.c  rob535_competition_mex.c  test_matlab_run.m  test_qp.c  theta.csv
lib-potential-field/: Cargo.toml
lib-potential-field/src/: potential_field.rs
matlab/: 64s60.mat  65s08.mat  65s08_mid.mat  65s08_mid2.mat  65s41.mat  65s41_mid.mat  65s41_mid2.mat  65s41_mid3.mat  65s43d2.mat  66s.mat  66s24d2.mat  67s37d2.mat  67s37d2_mid.mat  67s37d2_mid2.mat  68sd2.mat  boundary_force.m  build.sh  dist_to_obj.m  dist_to_target.m  electric_field.m  electric_force.m  euler_cons.m  euler_integrate.m  fmincon_fh.m  fmincon_fh2.m  fmincon_fh_70s_horison2.mat  fmincon_fh_70s_horizon.mat  fmincon_fh_90_horizon_rk4_3.mat  fmincon_fh_90s_horizon.mat  fmincon_fh_90s_horizon2.mat  fmincon_fh_90s_horizon2_post_done.mat  fmincon_fh_90s_horizon2_post_done2.mat  fmincon_fh_90s_horizon2_post_done3.mat  fmincon_fh_90s_horizon2_post_done4.mat  fmincon_fh_90s_horizon2_post_mid.mat  fmincon_fh_90s_horizon2_post_mid2.mat  fmincon_fh_90s_horizon2_post_mid3.mat  fmincon_fh_90s_horizon2_post_mid4.mat  fmincon_fh_90s_horizon_rk4.mat  fmincon_fh_90s_horizon_rk4_2.mat  (+40 more)
src/: cplexrust.c  lib.rs  main.rs
