[package]
name = "rob535_competition"
version = "0.1.0"
authors = ["Acshi Haggenmiller <acshikh@umich.edu>"]
links = "cplex"
build = "build.rs"

[dependencies]
libc = "0.2.0"
rustplotlib = "0.0.4"
lapack = "0.16.0"
blas = "0.20.0"
openblas-src = "0.6.1"
time = "*"

[lib]
name="rob535_competition"
path = "src/lib.rs"
crate-type=["staticlib"]

[[bin]]
name = "rob535_competition"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
