[package]
name = "rob535_competition"
version = "0.1.0"
authors = ["Acshi Haggenmiller <acshikh@umich.edu>"]
build = "build.rs"
edition = "2018"

[dependencies]
libc = "0.2.45"
rustplotlib = "0.0.4"
time = "*"
argmin = "0.1.6"

[lib]
name="rob535_competition"
path = "src/lib.rs"
crate-type=["staticlib"]

[[bin]]
name = "rob535_competition"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
